Fixed Menu Labels not showing and few styling improvement

--- a/css/pairs_game.css
+++ b/css/pairs_game.css
@@ -50,9 +50,7 @@ header>h2 {
     color: white;
 }
 
-/*.nav-button > input[type="checkbox"]:hover + label{
-    color:  #ff6100;
-}*/
+
 .nav-button>input[type="checkbox"]:checked+label {
     color: #00c3ff;
 }
@@ -62,7 +60,6 @@ header>nav,
     box-sizing: border-box;
     height: 100%;
     display: flex;
-
 }
 
 header>nav {
@@ -95,9 +92,10 @@ header>nav>ul>li>.navTxt {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1.1em;
     color: beige;
+    border-bottom: 3px solid #00c3ff00;
     border-radius: 15px;
     padding: 30px 20px;
-    transition: color .3s;
+    transition: color .3s, border .3s;
 }
 
 header>nav>ul>.nav-hidden {
@@ -111,7 +109,7 @@ header>nav>ul>li:hover>a {
 
 header>nav>ul>li:hover>.navTxt {
     color: #ff7925;
-    border-bottom: 3px solid #00c3ff;
+    border-bottom: 3px solid #00c3ffff;
 }
 
 /*--------------------------FIN ENCABEZADO DE LA PAGINA-----------------------------------------*/
@@ -424,7 +422,9 @@ header>nav>ul>li:hover>.navTxt {
 
     header>nav>ul>li>a,
     header>nav>ul>li>.navTxt {
-        font-size: 1.4em;
+        font-size: 1.8em;
+        padding: 40px 30px;
+        text-align: center;
     }
 
     /*---------------------CUERPO---------------------*/
